--- a/Anime Website/SL.html
+++ b/Anime Website/SL.html
@@ -229,7 +229,9 @@
             </div>
             <div class="popup-overlay"></div>
             <div class="popup">
-                <button class="watch">Watch / Download</button>
+                <a href="./Download_Page.html">
+                    <button class="watch">Watch / Download</button>
+                </a>
                 <div class="popup-close-btn">&times;</div>
             </div>
             <div class="zip1">
