--- a/Anime Website/index.html
+++ b/Anime Website/index.html
@@ -179,9 +179,11 @@
                     <div class="parent1">
                         <div class="child3">
                             <div class="anime">
-                                <img src="./utils/Solo Leveling(1).jpg"
-                                    alt="Solo Leveling Image"
-                                    class="latest_img">
+                                <a href="./SL.html">
+                                    <img src="./utils/Solo Leveling(1).jpg"
+                                        alt="Solo Leveling Image"
+                                        class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
                                         <a href="./SL.html">
@@ -193,8 +195,8 @@
                                             Multi
                                             <br> Audio 480p, 720p &amp; 1080p
                                             HD<br>WEB-DL | 10bit HEVC ESub
-                                        </a>
-                                    </p>
+                                        </p>
+                                    </a>
                                     <br>
                                     <div class="time">
                                         <div class="date">
@@ -212,8 +214,10 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="./utils/Jujutsu Kaisen(1).jpg"
-                                    alt="Jujutsu Kaisen" class="latest_img">
+                                <a href="JJK.html">
+                                    <img src="./utils/Jujutsu Kaisen(1).jpg"
+                                        alt="Jujutsu Kaisen" class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
                                         <a href="JJK.html">
@@ -225,8 +229,8 @@
                                             |
                                             10bit
                                             HEVC ESub
-                                        </a>
-                                    </p>
+                                        </p>
+                                    </a>
                                     <br>
                                     <div class="time">
                                         <div class="date">
@@ -244,8 +248,10 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="./utils/Demon Slayer(1).jpg"
-                                    alt="Demon Slayer" class="latest_img">
+                                <a href="./DS.html">
+                                    <img src="./utils/Demon Slayer(1).jpg"
+                                        alt="Demon Slayer" class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
                                         <a href="./DS.html">
@@ -255,8 +261,8 @@
                                             1080p
                                             HD
                                             WEB-DL | 10bit HEVC ESub
-                                        </a>
-                                    </p>
+                                        </p>
+                                    </a>
                                     <br>
                                     <div class="time">
                                         <div class="date">
@@ -274,8 +280,10 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="./utils/Death Note(1).jpg"
-                                    alt="Death Note" class="latest_img">
+                                <a href="./DN.html">
+                                    <img src="./utils/Death Note(1).jpg"
+                                        alt="Death Note" class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
                                         <a href="./DN.html">
@@ -285,8 +293,8 @@
                                             1080p
                                             HD
                                             WEB-DL | 10bit HEVC ESub
-                                        </a>
-                                    </p>
+                                        </p>
+                                    </a>
                                     <br>
                                     <div class="time">
                                         <div class="date">
@@ -304,8 +312,11 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="./utils/Naruto(1).jpg" alt="Naruto"
-                                    class="latest_img">
+                                <a href="./Naruto.html">
+                                    <img src="./utils/Naruto(1).jpg"
+                                        alt="Naruto"
+                                        class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
                                         <a href="./Naruto.html">
@@ -317,8 +328,8 @@
                                             |
                                             10bit
                                             HEVC ESub
-                                        </a>
-                                    </p>
+                                        </p>
+                                    </a>
                                     <br>
                                     <div class="time">
                                         <div class="date">
@@ -336,11 +347,14 @@
                                 </div>
                             </div>
                             <div class="anime">
-                                <img src="./utils/Attack On Titan(1).jpg"
-                                    alt="Attack On Titan" class="latest_img">
+                                <a href="./AOT.html">
+                                    <img src="./utils/Attack On Titan(1).jpg"
+                                        alt="Attack On Titan"
+                                        class="latest_img">
+                                </a>
                                 <div class="description">
                                     <p>
-                                        <a href="./DN.html">
+                                        <a href="./AOT.html">
                                             Attack On Titan
                                             [Hindi-Tamil-Telugu<br>-Eng-Jap]
                                             Multi Audio 480p, 720p &amp;<br>
