--- a/Anime Website/DN.html
+++ b/Anime Website/DN.html
@@ -164,7 +164,7 @@
             <div class="screenshot">
                 <img src="./utils/Screens-1.png" alt="Screen" class="screen">
                 <img src="./utils/ScreenShot.jpg" alt="ScreenShot" class="screenshot1">
-                <img src="./utils/Downloadlogo.png" alt="Download Logo">
+                <img src="./utils/Downloadlogo.png" alt="Download Logo" class="dl">
             </div>
             <div class="episode1">
                 <p>||Single Episodes Download Link||</p>
