--- a/Anime Website/Download_Page.html
+++ b/Anime Website/Download_Page.html
@@ -17,13 +17,14 @@
                 class="telegram">
         </a>
         <h4>Click The Above Image To Watch/Download</h4>
-        <ul> *** Instructions:- ***
+        <ol>
+            <p>*** Instructions:- ***</p>
             <li>After Messaging On Telegram Wait For 1-2 Days You Will Be Get
                 Your Anime.</li>
             <li>Please Message In This Format:- Anime Name: ,Episode Number: (If
                 You Want Zip Then Just Write "Zip"), Quality: (480p, 720p,
                 1080p).
             </li>
-        </ul>
+        </ol>
     </body>
 </html>
