--- a/Hetuk/JavaScript/Fetch/Dog_Api.html
+++ b/Hetuk/JavaScript/Fetch/Dog_Api.html
@@ -15,7 +15,7 @@
         <h1>Cat Breeds Api Call</h1>
         <div class="d-flex justify-content-center align-items-center mt-3">
             <button
-                onclick="Apicalling(); confirm('Do You Have Dog?'); document.body.style.background='lightblue'"
+                onclick="ApiCalling(); confirm('Do You Have Dog?'); document.body.style.background='lightblue'"
                 class="bg-danger text-white border-0 p-2 rounded-2">
                 Click Here To Get Dog Breeds
             </button>
