--- a/Hetuk/JavaScript/Fetch/Dog_Api.html
+++ b/Hetuk/JavaScript/Fetch/Dog_Api.html
@@ -20,7 +20,7 @@
                 Click Here To Get Dog Breeds
             </button>
         </div>
-        <div class="infos" id="info"></div>
+        <div id="info"></div>
     </body>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
