--- a/Hetuk/JavaScript/Fetch/Fetch.html
+++ b/Hetuk/JavaScript/Fetch/Fetch.html
@@ -80,7 +80,7 @@
         <div class="infos" id="info"></div>
     </body>
     <!-- js file  -->
-    <script src="./Fetch.js"></script>
+    <script src="./JS/Fetch.js"></script>
 
     <!-- bootstrap js file  -->
 
