--- a/Hetuk/JavaScript/Fetch/Dog_Api.html
+++ b/Hetuk/JavaScript/Fetch/Dog_Api.html
@@ -9,7 +9,7 @@
             rel="stylesheet"
             integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
             crossorigin="anonymous">
-        <link rel="stylesheet" href="./Dog_Api.css">
+        <link rel="stylesheet" href="./CSS/Dog_Api.css">
     </head>
     <body class="h-100 w-100">
         <h1>Cat Breeds Api Call</h1>
@@ -26,5 +26,5 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
-    <script src="./Dog_Api.js"></script>
+    <script src="./JS/Dog_Api.js"></script>
 </html>
