--- a/Hetuk/JavaScript/Fetch/Movie_Api.html
+++ b/Hetuk/JavaScript/Fetch/Movie_Api.html
@@ -11,14 +11,12 @@
             crossorigin="anonymous">
         <link rel="stylesheet" href="./CSS/Movie_Api.css">
     </head>
-    <body class="h-100 w-100">
+    <body class="h-100 w-100" onload="dataLoad()">
         <h1>Movie Information Api</h1>
         <div class="d-flex justify-content-center align-items-center mt-3">
-            <button
-                onclick="ApiCalling(); alert('This Will Give Only Information About Movie'); document.body.style.background='#161fa7'"
+            <input type="text" id="searchInput"
+                onkeydown="ApiCalling(event); alert('This Will Give Only Information About Movie'); document.body.style.background='#161fa7'"
                 class="bg-info  text-white border-0 p-2 rounded-2">
-                Click Here To Get Information About Movies
-            </button>
         </div>
         <div id="info"></div>
     </body>
