--- a/Hetuk/JavaScript/Fetch/Movie_Api.html
+++ b/Hetuk/JavaScript/Fetch/Movie_Api.html
@@ -12,13 +12,17 @@
         <link rel="stylesheet" href="./CSS/Movie_Api.css">
     </head>
     <body class="h-100 w-100" onload="dataLoad()">
-        <h1>Movie Information Api</h1>
-        <div class="d-flex justify-content-center align-items-center mt-3">
-            <input type="text" id="searchInput"
-                onkeydown="ApiCalling(event); alert('This Will Give Only Information About Movie'); document.body.style.background='#161fa7'"
-                class="bg-info  text-white border-0 p-2 rounded-2">
+        <div id="loader"></div>
+        <div id="myDiv">
+            <h1>Movie Information Api</h1>
+            <div
+                class="d-flex justify-content-center align-items-center mt-3">
+                <input type="text" id="searchInput"
+                    onkeydown="ApiCalling(event); alert('This Will Give Only Information About Movie'); document.body.style.background='#161fa7'"
+                    class="bg-info  text-white border-0 p-2 rounded-2">
+            </div>
+            <div id="info"></div>
         </div>
-        <div id="info"></div>
     </body>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
