--- a/Hetuk/JavaScript/Fetch/Movie_Api.html
+++ b/Hetuk/JavaScript/Fetch/Movie_Api.html
@@ -18,7 +18,7 @@
             <div
                 class="d-flex justify-content-center align-items-center mt-3">
                 <input type="text" id="searchInput"
-                    onkeydown="ApiCalling(event); alert('This Will Give Only Information About Movie'); document.body.style.background='#161fa7'"
+                    onkeydown="ApiCalling(event);"
                     class="bg-info  text-white border-0 p-2 rounded-2">
             </div>
             <div id="info"></div>
