--- a/Hetuk/JavaScript/Fetch/Movie_Api.html
+++ b/Hetuk/JavaScript/Fetch/Movie_Api.html
@@ -36,6 +36,7 @@
         <div id="loader"></div>
         <div id="myDiv">
             <div id="info"></div>
+            <div id="info"></div>
         </div>
     </body>
     <script
