--- a/Hetuk/JavaScript/Pagination/index.html
+++ b/Hetuk/JavaScript/Pagination/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="./CSS/index.css">
     </head>
     <body onload="dataFetch()">
+        <div>Hello</div>
         <div class="main"></div>
         <div class="btn">
             <input id="prev" value="Prev" type="button"
