--- a/Hetuk/JavaScript/Pagination/index.html
+++ b/Hetuk/JavaScript/Pagination/index.html
@@ -16,6 +16,7 @@
             <input id="next" value="Next" type="button"
                 onclick="nextBtnInvokation()">
         </div>
+        <div>Hello</div>
     </body>
     <script src="./index.js" defer></script>
 </html>
