Added Back To Top Button

--- a/Hetuk/JavaScript/Fetch/Movie_Api.html
+++ b/Hetuk/JavaScript/Fetch/Movie_Api.html
@@ -37,7 +37,7 @@
         <div id="myDiv">
             <div id="info"></div>
         </div>
-        <div id="back">⬆️</div>
+        <div id="back"><a href="#">⬆️</a></div>
     </body>
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
