--- a/Hetuk/JavaScript/Form/index.html
+++ b/Hetuk/JavaScript/Form/index.html
@@ -25,7 +25,9 @@
                 width: 100%;
                 border: 2px solid;
                 border-radius: 5px;
-                margin: 2px 0;
+                padding: 3px;
+                margin: 3px 0;
+                cursor: pointer;
             }
       </style>
     </head>
