--- a/Hetuk/JavaScript/Form/index.html
+++ b/Hetuk/JavaScript/Form/index.html
@@ -10,16 +10,21 @@
                 padding: 0;
                 box-sizing: border-box;
                 text-transform: capitalize;
+                text-align: center;
             }
             body,form{
-                padding: 15px;
+                padding: 30px 15px;
             }
-            table, th,td{
-                width: auto;
+            body{
+                padding-top: 100px;
+            }
+            th,table,td{
                 border: 2px solid;
+                margin-left: 20%;
+                font-size: x-large;
             }
             td{
-                padding: 5px 10px;
+                padding: 5px 20px;
             }
             button{
                 width: 100%;
@@ -29,9 +34,21 @@
                 margin: 3px 0;
                 cursor: pointer;
             }
+            input{
+                padding: 5px;
+                border: 2px solid;
+            }
+            input::placeholder{
+                text-align: center;
+                font-size: medium;
+            }
+            .submit{
+                padding: 5px 10px;
+            }
       </style>
     </head>
     <body onload="UI()">
+        <h1>User Info Form</h1>
         <form onsubmit="formFunction(event)">
             <input type="text" id="userName" placeholder="Enter You Name"
                 required>
@@ -39,7 +56,7 @@
                 required>
             <input type="password" id="userPass"
                 placeholder="Enter Your Password" required>
-            <input type="submit">
+            <input type="submit" class="submit">
         </form>
         <section id="infoTable"></section>
     </body>
