--- a/Hetuk/JavaScript/Form/toDo.html
+++ b/Hetuk/JavaScript/Form/toDo.html
@@ -34,14 +34,14 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          gap: 70px;
+          gap: 50px;
           margin: 20px 0;
         }
         form{
           display: flex;
           justify-content: center;
           align-items: center;
-          gap: 25px;
+          gap: 17px;
         }
         input,
         button{
@@ -55,8 +55,20 @@
         button{
           cursor: pointer;
         }
+        input[type="submit"]{
+          background-color: black;
+          color: whitesmoke;
+        }
         input{
           text-align: center;
+        }
+        .delete_btn{
+          background-color: red;
+          border: 2px solid red;
+        }
+        .edits_btn{
+          background-color: aquamarine;
+          border: 2px solid aquamarine;
         }
         .button{
           display: flex;
