--- a/Hetuk/JavaScript/Weather_Api/index.html
+++ b/Hetuk/JavaScript/Weather_Api/index.html
@@ -5,36 +5,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Wheather App</title>
         <link rel="stylesheet" href="./CSS/index.css" />
-        <link rel="shortcut icon" href="./Utils/clear.png" />
     </head>
     <body>
+        <h1>Weather Information</h1>
         <div class="card">
             <div class="search">
-                <input type="text" placeholder="Enter city name"
-                    spellcheck="false" />
-                <button><img src="./Utils/search.png" alt /></button>
-            </div>
-            <div class="error">
-                <p>Invalid city name.</p>
+                <input type="text" placeholder="Enter City Name">
+                <button>Check Weather</button>
             </div>
             <div class="weather">
-                <img src="./Utils/rain.png" class="weather-icon" alt />
-                <h1 id="temp">22°C</h1>
-                <h2 class="city">New York</h2>
-                <div class="details">
-                    <div class="col">
-                        <img src="./Utils/humidity.png" alt />
-                        <div>
-                            <p class="humidity">50%</p>
-                            <p>humidity</p>
-                        </div>
+                <img src="./Utils/rain.png" alt="Rain Image"
+                    class="weather_icon">
+                <h1 class="temp">22°C</h1>
+                <h1 class="city">Mumbai</h1>
+            </div>
+            <div class="details">
+                <div class="col">
+                    <img src="./Utils/humidity.png" alt="Humidity Image">
+                    <div>
+                        <p class="humidity">50%</p>
+                        <p>Humidity</p>
                     </div>
-                    <div class="col">
-                        <img src="./Utils/wind.png" alt />
-                        <div>
-                            <p class="wind">15 km/h</p>
-                            <p>Wind speed</p>
-                        </div>
+                </div>
+                <div class="col">
+                    <img src="./Utils/wind.png" alt="Wind Image">
+                    <div>
+                        <p class="wind">15 km/h</p>
+                        <p>Wind Speed</p>
                     </div>
                 </div>
             </div>
