--- a/Hetuk/JavaScript/Weather_Api/index.html
+++ b/Hetuk/JavaScript/Weather_Api/index.html
@@ -11,29 +11,9 @@
         <div class="card">
             <div class="search">
                 <input type="text" placeholder="Enter City Name">
-                <button>Check Weather</button>
-            </div>
-            <div class="weather">
-                <img src="./Utils/rain.png" alt="Rain Image"
-                    class="weather_icon">
-                <h1 class="temp">22°C</h1>
-                <h1 class="city">Mumbai</h1>
-            </div>
-            <div class="details">
-                <div class="col">
-                    <img src="./Utils/humidity.png" alt="Humidity Image">
-                    <div>
-                        <p class="humidity">50%</p>
-                        <p>Humidity</p>
-                    </div>
-                </div>
-                <div class="col">
-                    <img src="./Utils/wind.png" alt="Wind Image">
-                    <div>
-                        <p class="wind">15 km/h</p>
-                        <p>Wind Speed</p>
-                    </div>
-                </div>
+                <button onclick="ApiCalling()">Check Weather <img
+                        src="./Utils/weather.svg"
+                        alt></button>
             </div>
         </div>
     </body>
