--- a/Hetuk/JavaScript/Weather_Api/index.html
+++ b/Hetuk/JavaScript/Weather_Api/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Wheather App</title>
+        <title>Hetuk Wheather App</title>
         <link rel="stylesheet" href="./CSS/index.css" />
+        <link rel="shortcut icon" href="./Utils/Icon.svg">
     </head>
     <body>
         <h1>Weather Information</h1>
-        <div class="card">
-            <div class="search">
-                <input type="text" placeholder="Enter City Name">
-                <button onclick="ApiCalling()">Check Weather <img
-                        src="./Utils/weather.svg"
-                        alt></button>
+        <div class="search">
+            <input type="text" placeholder="Enter City Name">
+            <button onclick="ApiCalling()">Check Weather <img
+                    src="./Utils/weather.svg"
+                    alt></button>
+            <div class="card">
             </div>
         </div>
     </body>
