--- a/Hetuk/JavaScript/Weather_Api/index.html
+++ b/Hetuk/JavaScript/Weather_Api/index.html
@@ -14,8 +14,7 @@
             <button onclick="ApiCalling()">Check Weather <img
                     src="./Utils/weather.svg"
                     alt></button>
-            <div class="card">
-            </div>
+            <div class="card"></div>
         </div>
     </body>
     <script src="./JS/index.js"></script>
