--- a/Hetuk/HTML/Basic_JS.html
+++ b/Hetuk/HTML/Basic_JS.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Javascript</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Basic Javascript</title>
+    </head>
 
-<body>
-    <h1>Hello World</h1>
-</body>
-<script>
+    <body>
+        <h1>Hello World</h1>
+        <div class="hello"></div>
+    </body>
+    <script>
     console.log("Hello JavaScript");
 </script>
 
