--- a/Hetuk/JavaScript/Fetch/Fetch1.html
+++ b/Hetuk/JavaScript/Fetch/Fetch1.html
@@ -14,8 +14,7 @@
     <body class="h-100 w-100">
         <h1>Cat Breeds Api Call</h1>
         <!-- Small screen button -->
-        <div class="d-flex justify-content-center align-items-center mt-3"><div
-                class="hello"></div>
+        <div class="d-flex justify-content-center align-items-center mt-3"></div>
             <button
                 onclick="Apicalling(); confirm('Do You Have Cat?'); document.body.style.background='lightblue'"
                 class="bg-danger text-white border-0 p-2 rounded-2">
