--- a/Hetuk/JavaScript/CRUD/JSON_ToDo.html
+++ b/Hetuk/JavaScript/CRUD/JSON_ToDo.html
@@ -43,6 +43,7 @@
                 width: 70px;
                 padding: 4px 0;
                 border: 2px solid;
+                cursor: pointer;
             }
         </style>
     </head>
@@ -54,6 +55,7 @@
                 <button onclick="myTodos()" class="add">Add</button>
             </div>
             <div id="dataInfo"></div>
+            <div class="hello"></div>
         </div>
     </body>
     <script src="./index.js"></script>
